[package]
name = "pawslib"
description = "Protocol to Access White-Space (PAWS) Databases"
version = "0.1.0"
authors = ["TVWS-Project Team"]
edition = "2018"

[lib]
name = "paws"
path = "src/lib.rs"

[[bin]]
name = "paws-server"
path = "src/server.rs"

[[bin]]
name = "paws-client"
path = "src/client.rs"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }

# dependency: OpenSSL
# sudo apt-get install pkg-config libssl-dev
# reqwest = { version = "0.11.3", features = ["json"] }
warp = "0.3.1"
redis = { version = "0.20.2", features=["tls"]}
mac_address = "1.1.1"
# mongodb = "2.0.0"
env_logger = "0.8.4"
log = "0.4.14"